--- a/.gitignore
+++ b/.gitignore
@@ -173,9 +173,22 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-# Cursor  
-#  Cursor is an AI-powered code editor.`.cursorignore` specifies files/directories to 
+# Cursor
+#  Cursor is an AI-powered code editor.`.cursorignore` specifies files/directories to
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Project Data Files (tracked by DVC)
+# Raw crawled HTML files
+/data/raw/
+# Metadata JSON files
+/data/metadata/
+# Parsed content
+/data/parsed/
+# Crawled website list
+/data/crawled_websites.txt
+# Keep DVC files, ignore actual data
+/data/labels/weak.csv
+/data/labels/manual.csv
