--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,6 @@ jsonschema-specifications==2025.4.1
 kubernetes==33.1.0
 langchain-core==0.3.75
 langchain-groq==0.3.6
-langchain-ollama==0.3.7
 langcodes==3.5.0
 langgraph==0.6.6
 langgraph-checkpoint==2.1.1
@@ -108,7 +107,6 @@ networkx==3.5
 nodeenv==1.9.1
 numpy==2.3.1
 oauthlib==3.3.1
-ollama==0.5.3
 onnxruntime==1.22.0
 openai==1.97.0
 openpyxl==3.1.5
@@ -212,3 +210,16 @@ xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.23.0
+
+trafilatura
+readability-lxml
+
+scikit-learn
+PyYAML
+fastapi
+uvicorn
+dvc
+beautifulsoup4
+faiss-cpu
+sentence-transformers
+whoosh
